--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import xml.etree.ElementTree as ET\n",
-    "from rdflib import Graph, Literal, Namespace, RDF, URIRef, OWL\n",
-    "from owlready2 import *"
+    "import xml.etree.ElementTree as ET"
    ],
    "metadata": {
     "collapsed": false,
@@ -19,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "data = pd.read_csv('data/predictions_small.csv')\n",
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "#This could probably be made a lot more efficiently\n",
@@ -57,43 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "                                                path  \\\n0  afp_2021/2021/03/03/afp.com-20210303T141025Z-T...   \n1  afp_2021/2021/03/03/afp.com-20210303T141025Z-T...   \n2  afp_2021/2021/03/03/afp.com-20210303T141025Z-T...   \n3  afp_2021/2021/03/03/afp.com-20210303T141025Z-T...   \n4  afp_2021/2021/03/03/afp.com-20210303T141025Z-T...   \n\n                                            sentence  prediction  \\\n0  India skipper Virat Kohli on Wednesday credite...           1   \n1  \"There is always too much noise and too much c...           1   \n2  \"The reason for our success has been that we h...           1   \n3  England captain Joe Root said Test players sho...           2   \n4  \"I think that's part and parcel of Test cricke...           0   \n\n                                            PublicID  \n0  urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...  \n1  urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...  \n2  urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...  \n3  urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...  \n4  urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>path</th>\n      <th>sentence</th>\n      <th>prediction</th>\n      <th>PublicID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>afp_2021/2021/03/03/afp.com-20210303T141025Z-T...</td>\n      <td>India skipper Virat Kohli on Wednesday credite...</td>\n      <td>1</td>\n      <td>urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>afp_2021/2021/03/03/afp.com-20210303T141025Z-T...</td>\n      <td>\"There is always too much noise and too much c...</td>\n      <td>1</td>\n      <td>urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>afp_2021/2021/03/03/afp.com-20210303T141025Z-T...</td>\n      <td>\"The reason for our success has been that we h...</td>\n      <td>1</td>\n      <td>urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>afp_2021/2021/03/03/afp.com-20210303T141025Z-T...</td>\n      <td>England captain Joe Root said Test players sho...</td>\n      <td>2</td>\n      <td>urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>afp_2021/2021/03/03/afp.com-20210303T141025Z-T...</td>\n      <td>\"I think that's part and parcel of Test cricke...</td>\n      <td>0</td>\n      <td>urn:newsml:afp.com:20210303T141025Z:TX-PAR-TVY...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "class Article(Thing): #Creating the article class as base\n",
-    "    pass\n",
-    "\n",
-    "rnews = Namespace('http://iptc.org/std/rNews/2011-10-07#')\n",
-    "EX = Namespace(\"https://example.org/\")\n",
-    "\n",
-    "graph = Graph()\n",
-    "\n",
-    "graph.add((rnews.Article, RDF.type, rdfs.Class))\n",
-    "graph.add((rnews.Article, EX.hasSentence, ))"
    ],
    "metadata": {
     "collapsed": false,
