Changed requirements file, and made variable name more clear

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -168,11 +168,11 @@
     "\n",
     "    graph.add((URIRef(row['URI']), RDF.type, rnews.Article )) #Add the URI as article\n",
     "    graph.add((URIRef(row['URI']), rnews.identifier, Literal(row['PublicID']))) #Link the PublicID to the article\n",
-    "    uri = node_creation('', row['sentence'], base_add='/sentence') #Generate the URI for the sentence\n",
-    "    graph.add((URIRef(row['URI']), nif.sentence, uri)) #Link the article to the sentence\n",
-    "    graph.add((uri, RDF.type, nif.Sentence)) #Make the URI of class 'Sentence'\n",
-    "    graph.add((uri, RDF.value, Literal(row['sentence']))) #Set the value of the URI equal to the sentence\n",
-    "    graph.add((uri, nif.category, faro_classes[row['prediction']])) #The class of the sentence\n",
+    "    sentence_uri = node_creation('', row['sentence'], base_add='/sentence') #Generate the URI for the sentence\n",
+    "    graph.add((URIRef(row['URI']), nif.sentence, sentence_uri)) #Link the article to the sentence\n",
+    "    graph.add((sentence_uri, RDF.type, nif.Sentence)) #Make the URI of class 'Sentence'\n",
+    "    graph.add((sentence_uri, RDF.value, Literal(row['sentence']))) #Set the value of the URI equal to the sentence\n",
+    "    graph.add((sentence_uri, nif.category, faro_classes[row['prediction']])) #The class of the sentence\n",
     "\n",
     "#graph.serialize('Data/examples/first_sentence.ttl', format='turtle')"
    ],
