Finalized the finetuning of Rebel, and added F1 metrics for subject, object and per relation type. Best performing model is now saved based on macro F1 over the relations.

--- a/mapping_rebel_data.ipynb
+++ b/mapping_rebel_data.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "#Used for mapping the updated file where data is already split\n",
@@ -206,8 +206,20 @@
     "data = data[data.label != str(0)]\n",
     "data = data.rename(columns={\"sentence\": \"context\"})\n",
     "data['triplets'] = '<triplets> ' + data['trigger1'] + ' <subj> ' + data['trigger2'] + ' <obj> ' + data['label'] #Add the suitable format\n",
-    "data.to_csv('Data/rebel/rebel_format_v2.csv', index=False)"
+    "#data.to_csv('Data/rebel/rebel_format_v2.csv', index=False)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
