--- a/relation_extraction.ipynb
+++ b/relation_extraction.ipynb
@@ -2,8 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    },
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "b-msVVZZ3Lmg",
+    "outputId": "2c63d5b6-7c1f-4cab-af95-b5e4fba4e9d8"
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+      "Requirement already satisfied: transformers in /usr/local/lib/python3.9/dist-packages (4.26.1)\n",
+      "Requirement already satisfied: evaluate in /usr/local/lib/python3.9/dist-packages (0.4.0)\n",
+      "Requirement already satisfied: rouge_score in /usr/local/lib/python3.9/dist-packages (0.1.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.9/dist-packages (from transformers) (23.0)\n",
+      "Requirement already satisfied: requests in /usr/local/lib/python3.9/dist-packages (from transformers) (2.25.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.11.0 in /usr/local/lib/python3.9/dist-packages (from transformers) (0.13.2)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.9/dist-packages (from transformers) (4.65.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.9/dist-packages (from transformers) (1.22.4)\n",
+      "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from transformers) (3.9.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.9/dist-packages (from transformers) (2022.6.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.9/dist-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /usr/local/lib/python3.9/dist-packages (from transformers) (0.13.2)\n",
+      "Requirement already satisfied: pandas in /usr/local/lib/python3.9/dist-packages (from evaluate) (1.4.4)\n",
+      "Requirement already satisfied: fsspec[http]>=2021.05.0 in /usr/local/lib/python3.9/dist-packages (from evaluate) (2023.3.0)\n",
+      "Requirement already satisfied: multiprocess in /usr/local/lib/python3.9/dist-packages (from evaluate) (0.70.14)\n",
+      "Requirement already satisfied: datasets>=2.0.0 in /usr/local/lib/python3.9/dist-packages (from evaluate) (2.10.1)\n",
+      "Requirement already satisfied: responses<0.19 in /usr/local/lib/python3.9/dist-packages (from evaluate) (0.18.0)\n",
+      "Requirement already satisfied: dill in /usr/local/lib/python3.9/dist-packages (from evaluate) (0.3.6)\n",
+      "Requirement already satisfied: xxhash in /usr/local/lib/python3.9/dist-packages (from evaluate) (3.2.0)\n",
+      "Requirement already satisfied: nltk in /usr/local/lib/python3.9/dist-packages (from rouge_score) (3.7)\n",
+      "Requirement already satisfied: absl-py in /usr/local/lib/python3.9/dist-packages (from rouge_score) (1.4.0)\n",
+      "Requirement already satisfied: six>=1.14.0 in /usr/local/lib/python3.9/dist-packages (from rouge_score) (1.15.0)\n",
+      "Requirement already satisfied: pyarrow>=6.0.0 in /usr/local/lib/python3.9/dist-packages (from datasets>=2.0.0->evaluate) (9.0.0)\n",
+      "Requirement already satisfied: aiohttp in /usr/local/lib/python3.9/dist-packages (from datasets>=2.0.0->evaluate) (3.8.4)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.9/dist-packages (from huggingface-hub<1.0,>=0.11.0->transformers) (4.5.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.9/dist-packages (from requests->transformers) (1.26.15)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.9/dist-packages (from requests->transformers) (2.10)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /usr/local/lib/python3.9/dist-packages (from requests->transformers) (4.0.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.9/dist-packages (from requests->transformers) (2022.12.7)\n",
+      "Requirement already satisfied: joblib in /usr/local/lib/python3.9/dist-packages (from nltk->rouge_score) (1.1.1)\n",
+      "Requirement already satisfied: click in /usr/local/lib/python3.9/dist-packages (from nltk->rouge_score) (8.1.3)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.9/dist-packages (from pandas->evaluate) (2022.7.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.9/dist-packages (from pandas->evaluate) (2.8.2)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (6.0.4)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (4.0.2)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.8.2)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (22.2.0)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.3.1)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (1.3.3)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /usr/local/lib/python3.9/dist-packages (from aiohttp->datasets>=2.0.0->evaluate) (3.1.0)\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "! pip install transformers evaluate rouge_score\n",
@@ -18,17 +85,11 @@
     "nltk.download('punkt')\n",
     "from sklearn import preprocessing\n",
     "import re"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def preprocess_data(data): #this is used to process the data for the tokenizer\n",
@@ -56,15 +117,15 @@
     "        return len(self.labels['input_ids'])\n"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "id": "RgqGVTEr3Lmj"
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "model_checkpoint = \"Babelscape/rebel-large\"\n",
@@ -72,10 +133,10 @@
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)"
    ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "id": "f8ceSbln3Lmo"
    }
   },
   {
@@ -85,7 +146,7 @@
    "source": [
     "seed = 1\n",
     "data = pd.read_csv('rebel_format_v2.csv')\n",
-    "train_data, val_data = train_test_split(data, test_size=0.2, random_state=seed)\n",
+    "train_data, val_data = train_test_split(data, test_size=0.1, random_state=seed)\n",
     "del data\n",
     "\n",
     "train_encodings, train_labels = preprocess_data(train_data)\n",
@@ -109,14 +170,16 @@
     "args = Seq2SeqTrainingArguments(\n",
     "    f\"{model_name}-finetuned-faro-relations\",\n",
     "    evaluation_strategy = \"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    logging_strategy=\"epoch\",\n",
     "    learning_rate=0.000025,\n",
     "    per_device_train_batch_size=8,\n",
     "    per_device_eval_batch_size=8,\n",
     "    weight_decay=0.1,\n",
-    "    save_total_limit=3,\n",
-    "    save_steps=300,\n",
-    "    #load_best_model_at_end=True,\n",
-    "    metric_for_best_model=\"rouge1\",\n",
+    "    save_total_limit=1,\n",
+    "    #save_steps=300,\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model='F1 relations',\n",
     "    num_train_epochs=7,\n",
     "    predict_with_generate=True,\n",
     "    fp16 = True,\n",
@@ -137,6 +200,7 @@
    "outputs": [],
    "source": [
     "metric = load_metric(\"rouge\")\n",
+    "f1_metric = evaluate.load(\"f1\")\n",
     "\n",
     "def compute_rouge(eval_pred):\n",
     "    predictions, labels = eval_pred\n",
@@ -176,7 +240,6 @@
     "\n",
     "def compute_f1(eval_pred):\n",
     "\n",
-    "    f1_metric = evaluate.load(\"f1\")\n",
     "    metrics = {}\n",
     "\n",
     "    predictions, labels = eval_pred\n",
@@ -190,44 +253,83 @@
     "    try:\n",
     "      predictions = pd.DataFrame(predictions, columns =['Subject', 'Object', 'Relation'])\n",
     "    except:\n",
-    "      print(predictions)\n",
+    "      print(\"Something went wrong with extracting and creating predictions dataframe\")\n",
     "\n",
-    "\n",
-    "    labels = [re.findall(pattern, instance) for instance in labels]\n",
-    "    labels = pd.DataFrame(labels, columns =['Subject', 'Object', 'Relation'])\n",
-    "\n",
+    "    try:\n",
+    "      labels = [check_format(re.findall(pattern, instance)) for instance in labels]\n",
+    "      labels = pd.DataFrame(labels, columns =['Subject', 'Object', 'Relation'])\n",
+    "    except:\n",
+    "      print(\"Something went wrong with extracting and creating label dataframe\")\n",
     "    #F1 can only be computed on integer labels, so we need to encode them\n",
-    "    le_subject= preprocessing.LabelEncoder()\n",
-    "    le_subject.fit(predictions['Subject']) #Learn the encodings on the predictions for subject\n",
-    "    le_subject_dict = dict(zip(le_subject.classes_, le_subject.transform(le_subject.classes_)))\n",
+    "    try:\n",
+    "        le_subject= preprocessing.LabelEncoder()\n",
+    "        le_subject.fit(predictions['Subject']) #Learn the encodings on the predictions for subject\n",
+    "        le_subject_dict = dict(zip(le_subject.classes_, le_subject.transform(le_subject.classes_)))\n",
+    "    except:\n",
+    "        print(\"Something went wrong when calculating subject encodings\")\n",
     "    del le_subject\n",
     "\n",
     "    #Encode in the same way, if it doesn't exist set to non existent number\n",
-    "    predictions['Subject'] = predictions['Subject'].apply(lambda x: le_subject_dict.get(x, 999999999))\n",
-    "    labels['Subject'] = labels['Subject'].apply(lambda x: le_subject_dict.get(x, 999999999))\n",
-    "    metrics['f1_subject'] = f1_metric.compute(predictions=predictions['Subject'].to_list(), references=labels['Subject'].to_list(), average='macro')['f1']\n",
+    "    try:\n",
+    "        predictions['Subject'] = predictions['Subject'].apply(lambda x: le_subject_dict.get(x, 999999999))\n",
+    "        labels['Subject'] = labels['Subject'].apply(lambda x: le_subject_dict.get(x, 999999999))\n",
+    "    except:\n",
+    "        print(\"Something went wrong when applying the subject labels\")\n",
+    "    \n",
+    "    try:\n",
+    "        metrics['F1 Subject'] = f1_metric.compute(predictions=predictions['Subject'].to_list(), references=labels['Subject'].to_list(), average='macro')['f1']\n",
+    "    except:\n",
+    "        print(\"Something went wrong when computing the f1 score for subject\")\n",
     "    del le_subject_dict\n",
     "\n",
-    "    le_object= preprocessing.LabelEncoder()\n",
-    "    le_object.fit(predictions['Object']) #Learn the encodings on the predictions for object\n",
-    "    le_object_dict = dict(zip(le_object.classes_, le_object.transform(le_object.classes_)))\n",
+    "    try:\n",
+    "        le_object= preprocessing.LabelEncoder()\n",
+    "        le_object.fit(predictions['Object']) #Learn the encodings on the predictions for object\n",
+    "        le_object_dict = dict(zip(le_object.classes_, le_object.transform(le_object.classes_)))\n",
+    "    except:\n",
+    "        print(\"Something went wrong when calculating object encodings\")\n",
     "    del le_object\n",
     "\n",
-    "    predictions['Object'] = predictions['Object'].apply(lambda x: le_object_dict.get(x, 999999999))\n",
-    "    labels['Object'] = labels['Object'].apply(lambda x: le_object_dict.get(x, 999999999))\n",
-    "    metrics['f1_object'] = f1_metric.compute(predictions=predictions['Object'].to_list(), references=labels['Object'].to_list(), average='macro')['f1']\n",
+    "    try:\n",
+    "        predictions['Object'] = predictions['Object'].apply(lambda x: le_object_dict.get(x, 999999999))\n",
+    "        labels['Object'] = labels['Object'].apply(lambda x: le_object_dict.get(x, 999999999))\n",
+    "    except:\n",
+    "        print(\"Something went wrong when applying Object encodings\")\n",
+    "    \n",
+    "    try:\n",
+    "        metrics['F1 Object'] = f1_metric.compute(predictions=predictions['Object'].to_list(), references=labels['Object'].to_list(), average='macro')['f1']\n",
+    "    except:\n",
+    "        print(\"Something went wrong when computing F1 scores for object\")\n",
     "    del le_object_dict\n",
     "\n",
-    "    le_relations = preprocessing.LabelEncoder() #since there are a fixed number of classes no dict needs to be created\n",
-    "    le_relations.fit(predictions['Relation']) #Learn the representation on the predictions for relations\n",
+    "    try:\n",
+    "        le_relations = preprocessing.LabelEncoder() #since there are a fixed number of classes no dict needs to be created\n",
+    "        le_relations.fit(labels['Relation']) #Learn the representation on the predictions for relations\n",
+    "        le_relations_dict = dict(zip(le_relations.classes_, le_relations.transform(le_relations.classes_)))\n",
+    "        #del le_relations\n",
+    "    except:\n",
+    "        print(\"Something went wrong when calculating the relation encodings\")\n",
     "\n",
-    "    predictions['Relation'] = le_relations.transform(predictions['Relation'])\n",
-    "    labels['Relation'] = le_relations.transform(predictions['Relation'])\n",
+    "    try:\n",
+    "        labels['Relation'] = labels['Relation'].apply(lambda x: le_relations_dict.get(x, 999999999))\n",
+    "        predictions['Relation'] = predictions['Relation'].apply(lambda x: le_relations_dict.get(x, 999999999))\n",
+    "\n",
+    "        #print(labels['Relation'])\n",
+    "        #print(predictions['Relation'])\n",
+    "    except:\n",
+    "        print(\"Something went wrong when applying relation encodings\")\n",
     "    \n",
-    "    f1 = f1_metric.compute(predictions=predictions['Relation'].to_list(), references=labels['Relation'].to_list(), average= None)['f1']\n",
-    "\n",
-    "    for relation, score in zip(le_relations.classes_, f1):\n",
-    "        metrics[f'f1_{relation}'] = score\n",
+    "    try:\n",
+    "        f1 = f1_metric.compute(predictions=predictions['Relation'].to_list(), references=labels['Relation'].to_list(), average= None)['f1']\n",
+    "        metrics['F1 relations'] = f1_metric.compute(predictions=predictions['Relation'].to_list(), references=labels['Relation'].to_list(), average= 'macro')['f1']\n",
+    "    except:\n",
+    "        print(\"Something went wrong with computing f1 for relations\")\n",
+    "    try:\n",
+    "        \n",
+    "        for i in range(len(le_relations.classes_)):\n",
+    "            metrics[f'F1 {le_relations.classes_[i].strip()}'] = f1[i]\n",
+    "    except:\n",
+    "        print(\"something went wrong when assigning relation scores\")\n",
     "\n",
     "    return metrics\n"
    ],
@@ -296,7 +398,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#The code underneath is for loading the model, and making inferences\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
    ],
@@ -360,79 +461,6 @@
      "name": "#%%\n"
     }
    }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "for t, o in zip(text, decoded_output):\n",
-    "  print(f\"{t} - {o}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "for t, o in zip(text, decoded_output):\n",
-    "  print(f\"{t} - {o}\")"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "0VypmkohYUBm",
-    "outputId": "9bc228dc-bf8c-4e6c-f36a-f3b5b5614cbc"
-   },
-   "execution_count": 10,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "because the machine is old, it is unreliable -  old  unreliable  cause\n",
-      "many people have died in the storm -  died  storm  cause\n",
-      "now the preparation is complete, we can start again -  preparation  start  enable\n",
-      "the restrictions made sure less people got infected -  restrictions  got infected  prevent\n",
-      "I am running everyday because i want to run a marathon -  running  want  cause\n",
-      "the elevator is fixed, so i can go up again -  fixed  go  enable\n",
-      "There was a traffic jam, so i was late -  jam  late  cause\n",
-      "I broke my leg, so I can't run the marathon -  broke  marathon  prevent\n",
-      "Since I failed the exam, I can't graduate -  passed  graduate  cause\n",
-      "I did some shopping, because i want to cook later -  shopping  want  cause\n",
-      "I shouldn't have said that, I did not mean that -  said  mean  cause\n",
-      "I wanted to say that -  wanted  said  cause\n",
-      "I am planning on doing that later -  planning  doing  cause\n",
-      "I intend on doing that -  intend  doing  intend\n"
-     ]
-    }
-   ]
-  },
-  {
-   "cell_type": "code",
-   "source": [],
-   "metadata": {
-    "id": "_5IGiTbRwdWU"
-   },
-   "execution_count": null,
-   "outputs": []
   }
  ],
  "metadata": {
