Added script for training the model and created function to make inferences. Updated linking_predictions to support a new dataformat and for converting the wikidata link to the eventname

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -6,7 +6,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import xml.etree.ElementTree as ET"
+    "import xml.etree.ElementTree as ET\n",
+    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
+    "from rebel_finetuning_faro import make_predictions"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,7 +108,7 @@
    ],
    "source": [
     "#Add Asrael's URI's to the dataset. Note that some ID's can't be matched\n",
-    "URIs = pd.read_csv(\"Data/URI_ID.csv\")\n",
+    "URIs = pd.read_csv(\"Data/ASRAEL_data.csv\")\n",
     "data = data.join(URIs.set_index('Identifier'), on='PublicID')\n",
     "data = data.dropna() #For now remove the rows which don't have an URI.\n",
     "del URIs\n",
@@ -197,6 +199,108 @@
     "edge_labels = nx.get_edge_attributes(nx_graph, 'r')\n",
     "nx.draw_networkx_edge_labels(nx_graph, pos, edge_labels=edge_labels)\n",
     "nx.draw(nx_graph, with_labels=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "#This converts the data into the right format, by removing uneccessary tokens in text and converting the wikidata link to text\n",
+    "import pandas as pd\n",
+    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
+    "\n",
+    "data = pd.read_csv('Data/ASRAEL_data_full.csv').head(1)\n",
+    "data['Text'] = data['Text'].apply(lambda x: str(x)[23:-38]) #Strip the beginning and end\n",
+    "data['Text'] = data['Text'].apply(lambda x: str(x).replace('</p><p>', ''))\n",
+    "#data= data.drop_duplicates(subset=['URI', 'Identifier', 'Event', 'Location', 'Text'])\n",
+    "\n",
+    "event_mapping = {}\n",
+    "\n",
+    "sparql = SPARQLWrapper(\n",
+    "    \"https://query.wikidata.org/sparql\"\n",
+    ")\n",
+    "sparql.setReturnFormat(JSON)\n",
+    "\n",
+    "for event in data['Event'].unique().tolist():\n",
+    "    event_ = f\"wd:{event.split('/')[-1]}\"\n",
+    "\n",
+    "    sparql.setQuery(\"\"\"\n",
+    "    SELECT ?item WHERE {\n",
+    "    %s rdfs:label ?item.\n",
+    "    FILTER (lang(?item) = 'en')\n",
+    "} \"\"\" % (event_))\n",
+    "\n",
+    "    try:\n",
+    "        ret = sparql.queryAndConvert()\n",
+    "        event_name = ret['results']['bindings'][0]['item']['value']\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        event_name = None\n",
+    "\n",
+    "    event_mapping[event] = event_name\n",
+    "\n",
+    "data['Event'] = data['Event'].map(event_mapping)\n",
+    "\n",
+    "#This is not good, this has to be changed so that there are separate columns for the events\n",
+    "data = data.groupby(['URI','Identifier','Location', 'Time', 'Text']).agg({'Event': lambda x: list(x)}).reset_index(drop=False)\n",
+    "#data[data['Identifier'] == 'urn:newsml:afp.com:20210114T051621Z:TX-PAR-SGI29:1'] to test\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                 URI  \\\n0  http://asrael.eurecom.fr/news/015e163e-b59b-32...   \n1  http://asrael.eurecom.fr/news/025b59b7-6020-3e...   \n2  http://asrael.eurecom.fr/news/13690867-f9be-3e...   \n3  http://asrael.eurecom.fr/news/15a39f2c-a5a2-3f...   \n4  http://asrael.eurecom.fr/news/1e2d31f5-9160-39...   \n\n                                          Identifier    Location  \\\n0  urn:newsml:afp.com:20210119T190004Z:TX-PAR-SKZ...  Washington   \n1  urn:newsml:afp.com:20210119T212424Z:TX-PAR-SLE...  Washington   \n2  urn:newsml:afp.com:20210125T125408Z:TX-PAR-SPX...      Moscow   \n3  urn:newsml:afp.com:20210119T164920Z:TX-PAR-SKW...  Washington   \n4  urn:newsml:afp.com:20210124T194643Z:TX-PAR-SPL...      Moscow   \n\n                   Time                                               Text  \\\n0  2021-01-19T19:00:04Z  The US National Guard has pulled two soldiers ...   \n1  2021-01-19T21:24:24Z  Twelve US National Guard troops have been pull...   \n2  2021-01-25T12:54:08Z  Russia formally protested to the US embassy in...   \n3  2021-01-19T16:49:20Z  The incoming administration of President-elect...   \n4  2021-01-24T19:46:43Z  The Kremlin on Sunday accused the United State...   \n\n                                               Event        subject relation  \\\n0                     [Nationwide COVID-19 Memorial]      screening    cause   \n1                     [Nationwide COVID-19 Memorial]        actions  prevent   \n2  [Pro-Alexei Navalny Rallies in Russia, 23 Janu...        posting    cause   \n3                     [Nationwide COVID-19 Memorial]      subsidies  prevent   \n4  [2021 Russian protests, Pro-Alexei Navalny Ral...  investigation    cause   \n\n        object  \n0       ensure  \n1    extremism  \n2      accused  \n3       unfair  \n4  interfering  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>URI</th>\n      <th>Identifier</th>\n      <th>Location</th>\n      <th>Time</th>\n      <th>Text</th>\n      <th>Event</th>\n      <th>subject</th>\n      <th>relation</th>\n      <th>object</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>http://asrael.eurecom.fr/news/015e163e-b59b-32...</td>\n      <td>urn:newsml:afp.com:20210119T190004Z:TX-PAR-SKZ...</td>\n      <td>Washington</td>\n      <td>2021-01-19T19:00:04Z</td>\n      <td>The US National Guard has pulled two soldiers ...</td>\n      <td>[Nationwide COVID-19 Memorial]</td>\n      <td>screening</td>\n      <td>cause</td>\n      <td>ensure</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>http://asrael.eurecom.fr/news/025b59b7-6020-3e...</td>\n      <td>urn:newsml:afp.com:20210119T212424Z:TX-PAR-SLE...</td>\n      <td>Washington</td>\n      <td>2021-01-19T21:24:24Z</td>\n      <td>Twelve US National Guard troops have been pull...</td>\n      <td>[Nationwide COVID-19 Memorial]</td>\n      <td>actions</td>\n      <td>prevent</td>\n      <td>extremism</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>http://asrael.eurecom.fr/news/13690867-f9be-3e...</td>\n      <td>urn:newsml:afp.com:20210125T125408Z:TX-PAR-SPX...</td>\n      <td>Moscow</td>\n      <td>2021-01-25T12:54:08Z</td>\n      <td>Russia formally protested to the US embassy in...</td>\n      <td>[Pro-Alexei Navalny Rallies in Russia, 23 Janu...</td>\n      <td>posting</td>\n      <td>cause</td>\n      <td>accused</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>http://asrael.eurecom.fr/news/15a39f2c-a5a2-3f...</td>\n      <td>urn:newsml:afp.com:20210119T164920Z:TX-PAR-SKW...</td>\n      <td>Washington</td>\n      <td>2021-01-19T16:49:20Z</td>\n      <td>The incoming administration of President-elect...</td>\n      <td>[Nationwide COVID-19 Memorial]</td>\n      <td>subsidies</td>\n      <td>prevent</td>\n      <td>unfair</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>http://asrael.eurecom.fr/news/1e2d31f5-9160-39...</td>\n      <td>urn:newsml:afp.com:20210124T194643Z:TX-PAR-SPL...</td>\n      <td>Moscow</td>\n      <td>2021-01-24T19:46:43Z</td>\n      <td>The Kremlin on Sunday accused the United State...</td>\n      <td>[2021 Russian protests, Pro-Alexei Navalny Ral...</td>\n      <td>investigation</td>\n      <td>cause</td>\n      <td>interfering</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\mike-\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "C:\\Users\\mike-\\Documents\\VU\\Eurecom\\KG_mapping\\venv\\lib\\site-packages\\transformers\\generation\\utils.py:1273: UserWarning: Neither `max_length` nor `max_new_tokens` has been set, `max_length` will default to 200 (`generation_config.max_length`). Controlling `max_length` via the config is deprecated and `max_length` will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = make_predictions(data, 'rebel_finetuned.pth')"
    ],
    "metadata": {
     "collapsed": false,
