--- a/rebel_finetuning_faro.ipynb
+++ b/rebel_finetuning_faro.ipynb
@@ -3,13 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "id": "7qnFUUVA81Vp"
-   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -29,7 +22,13 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "import sys"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -508,7 +507,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#To make inferences\n",
+    "''''\n",
     "texts = pd.read_csv('drive/MyDrive/rebel_format_v2.csv').head(100)\n",
     "texts = texts['context'].tolist()\n",
     "predictions = []\n",
@@ -528,7 +527,8 @@
     "\n",
     "predictions = pd.DataFrame(predictions, columns=['subject', 'relation', 'object'])\n",
     "predictions['sentence']= texts\n",
-    "predictions.to_csv('predictions.csv')"
+    "predictions.to_csv('predictions.csv')\n",
+    "'''"
    ],
    "metadata": {
     "collapsed": false,
