Updated code to add sentence level classification to the KG

--- a/mapping_rebel_data.ipynb
+++ b/mapping_rebel_data.ipynb
@@ -151,41 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25 no effect\n",
-      "122 no effect\n",
-      "123 no effect\n",
-      "255 no effect\n",
-      "353 no effect\n",
-      "461 no effect\n",
-      "519 no effect\n",
-      "544 no effect\n",
-      "646 no effect\n",
-      "650 no effect\n",
-      "736 no effect\n",
-      "800 no effect\n",
-      "880 no effect\n",
-      "935 no effect\n",
-      "1023 no effect\n",
-      "1097 no effect\n",
-      "1203 no effect\n",
-      "1227 no effect\n",
-      "1272 no effect\n",
-      "1347 no effect\n",
-      "1387 no effect\n",
-      "1704 no effect\n",
-      "1785 no effect\n",
-      "1816 no effect\n",
-      "number of no relations: 96\n",
-      "number of no effects: 24\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# to get some statistics\n",
     "num_zero = 0\n",
@@ -214,7 +181,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -248,31 +216,6 @@
     "data= data.drop(data.columns[[0, 1, 2, 6, 8]], axis=1)\n",
     "data = convert_to_rebel(data)\n",
     "data.to_csv('Data/rebel_v2/rebel_format_v2.csv', index=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "outputs": [],
-   "source": [
-    "enables = pd.read_csv('Data/rebel_v2/data/enables.csv')\n",
-    "intends = pd.read_csv('Data/rebel_v2/data/intends.csv')\n",
-    "prevents = pd.read_csv('Data/rebel_v2/data/prevents.csv')\n",
-    "causes = pd.read_csv('Data/rebel_v2/data/our_data.csv')\n",
-    "causes = causes[causes['label'] == 'cause']\n",
-    "causes = causes.rename(columns={\"sentece\": \"sentence\", \"trigger_1\": \"trigger1\", \"trigger_2\": \"trigger2\"})\n",
-    "\n",
-    "total = pd.concat([enables, intends, prevents, causes]).reset_index()\n",
-    "total = total.drop(['index', 'Unnamed: 0.1', 'Unnamed: 0', 'tag'], axis=1)\n",
-    "\n",
-    "total = convert_to_rebel(total)\n",
-    "total.to_csv('Data/rebel_v2/rebel_format_v2.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -357,6 +300,24 @@
     "train_data.to_csv('Data/rebel_v2/data/new_split/train_rebel.csv')\n",
     "val_data.to_csv('Data/rebel_v2/data/new_split/val_rebel.csv')\n",
     "test_data.to_csv('Data/rebel_v2/data/new_split/test_rebel.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data=pd.read_csv('Data/rebel_v2/data/new_split/train_val_combined.csv').drop(data.columns[[0]], axis=1)\n",
+    "data['triplets'] = '<triplet> ' + data['trigger1'] + ' <subj> ' + data['trigger2'] + ' <obj> ' + data['label'] #Add the suitable format\n",
+    "data = data.sample(frac=1).reset_index(drop=True)\n",
+    "data.to_csv('Data/rebel_v2/data/new_split/train_val_combined_rebel.csv')"
    ],
    "metadata": {
     "collapsed": false,
