Fixed the issue where multiple relations could be extracted from the prediction of the REBEL model (this is not supported, it gives errors later on).

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -355,21 +355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\mike-\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "  0%|          | 0/1122 [00:00<?, ?it/s]C:\\Users\\mike-\\Documents\\VU\\Eurecom\\KG_mapping\\venv\\lib\\site-packages\\transformers\\generation\\utils.py:1313: UserWarning: Using `max_length`'s default (200) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
-      "  warnings.warn(\n",
-      "100%|██████████| 1122/1122 [2:22:48<00:00,  7.64s/it] \n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Perform predictions again since the sentence number is needed for event resolution\n",
     "import pandas as pd\n",
@@ -392,6 +379,7 @@
     "for index, row in tqdm(data.iterrows(), total=data.shape[0]):\n",
     "    sentences, predictions = make_predictions(tokenize.sent_tokenize(row['Text']), 'rebel_finetuned.pth')\n",
     "    for i, (sentence, prediction) in enumerate(zip(sentences, predictions)):\n",
+    "\n",
     "        total_uri.append(row['URI'])\n",
     "        total_identifier.append(row['Identifier'])\n",
     "        total_location.append(row['Location'])\n",
@@ -403,6 +391,7 @@
     "        total_relation.append(prediction[1])\n",
     "        total_object.append(prediction[2])\n",
     "\n",
+    "\n",
     "new_data = pd.DataFrame({'URI': total_uri, 'Identifier': total_identifier, 'Location': total_location, 'Time': total_time, 'Sentence_num': total_sentence_num, 'Sentence': total_sentences, 'Subject': total_subject, 'Relation': total_relation, 'Object': total_object, 'Event': total_event})\n",
     "\n",
     "new_data.to_csv('final_data_with_predictions.csv')"
@@ -410,7 +399,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
