Updated code to remove unwanted sentences. added a notebook for generating plots/statistics

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -225,20 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20059/20059 [00:14<00:00, 1370.65it/s]\n"
+      "100%|██████████| 20059/20059 [00:14<00:00, 1350.86it/s]\n"
      ]
     },
     {
      "data": {
-      "text/plain": "<Graph identifier=Ncad49450bc0345d2b7f74cdeac853aeb (<class 'rdflib.graph.Graph'>)>"
+      "text/plain": "<Graph identifier=N76abf0bdac5c4c1d9973de6047e21315 (<class 'rdflib.graph.Graph'>)>"
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,8 +355,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\mike-\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "  0%|          | 0/1122 [00:00<?, ?it/s]C:\\Users\\mike-\\Documents\\VU\\Eurecom\\KG_mapping\\venv\\lib\\site-packages\\transformers\\generation\\utils.py:1313: UserWarning: Using `max_length`'s default (200) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n",
+      "100%|██████████| 1122/1122 [2:42:08<00:00,  8.67s/it] \n"
+     ]
+    }
+   ],
    "source": [
     "# Perform predictions again since the sentence number is needed for event resolution\n",
     "import pandas as pd\n",
@@ -394,13 +407,14 @@
     "\n",
     "new_data = pd.DataFrame({'URI': total_uri, 'Identifier': total_identifier, 'Location': total_location, 'Time': total_time, 'Sentence_num': total_sentence_num, 'Sentence': total_sentences, 'Subject': total_subject, 'Relation': total_relation, 'Object': total_object, 'Event': total_event})\n",
     "\n",
+    "new_data = new_data[~((new_data['Sentence'].str.len() < 25) & new_data['Sentence'].str.contains('/'))].reset_index(drop=True)\n",
+    "\n",
     "new_data.to_csv('final_data_with_predictions.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -473,30 +487,6 @@
     "for row in qres:\n",
     "    print(f\"num_pred: {row.num_predicates} - num_article: {row.num_articles}: on average: {int(row.num_predicates) / int(row.num_articles)}\")"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
