--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -322,7 +322,7 @@
     "            #event_uri = node_creation('', event_name, base_add='/event')\n",
     "            graph.add((URIRef(row['URI']), schema.about, URIRef(event)))\n",
     "\n",
-    "graph.serialize('Data/examples/event_article_graph_complete_new.ttl', format='turtle')"
+    "graph.serialize('Data/examples/event_article_graph_complete.ttl', format='turtle')"
    ],
    "metadata": {
     "collapsed": false,
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# This code will load the clusters from a text file, and merge the nodes in the cluster together\n",
@@ -441,10 +441,12 @@
     "from resources import node_creation\n",
     "import pandas as pd\n",
     "from rdflib import Graph, Literal, RDF, URIRef, Namespace\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "data = pd.read_csv('Data/final_data_with_predictions_new.csv') #Load the original dataset\n",
-    "with open('Data/cluster_data/event_clusters_0.85.txt') as f: #Open the generated cluster file\n",
-    "    cluster_doc = f.readlines()"
+    "base_path = 'Data/cluster_data/output_all/'\n",
+    "cluster_dirs = os.listdir(base_path)\n",
+    "cluster_docs = [base_path + dir +'/event_clusters.txt' for dir in cluster_dirs if os.path.isdir(base_path + dir)]"
    ],
    "metadata": {
     "collapsed": false,
@@ -455,200 +457,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "http://kflow.eurecom.fr/subject/35242267-f003-5a05-9c4e-02eb1bd1bd73\n",
-      "http://kflow.eurecom.fr/subject/82cb0354-3a51-53f9-a555-23ab0769be42\n",
-      "http://kflow.eurecom.fr/subject/82cb0354-3a51-53f9-a555-23ab0769be42\n",
-      "http://kflow.eurecom.fr/object/14fa475d-55b1-5a8e-aca5-4fdaad1c767f\n",
-      "http://kflow.eurecom.fr/subject/00b9e053-5954-527e-b3ae-1f09a5a22b7a\n",
-      "http://kflow.eurecom.fr/subject/f19f0f34-f6f9-50bb-84e3-c283cb7d8016\n",
-      "http://kflow.eurecom.fr/subject/e14761c0-363e-5ee8-bd11-c57bdf88bae2\n",
-      "http://kflow.eurecom.fr/subject/35242267-f003-5a05-9c4e-02eb1bd1bd73\n",
-      "http://kflow.eurecom.fr/subject/50fc9e7d-0fcc-5ae8-ae2a-444b5d682ae3\n",
-      "http://kflow.eurecom.fr/subject/35242267-f003-5a05-9c4e-02eb1bd1bd73\n",
-      "http://kflow.eurecom.fr/subject/50fc9e7d-0fcc-5ae8-ae2a-444b5d682ae3\n",
-      "http://kflow.eurecom.fr/subject/50fc9e7d-0fcc-5ae8-ae2a-444b5d682ae3\n",
-      "http://kflow.eurecom.fr/subject/50fc9e7d-0fcc-5ae8-ae2a-444b5d682ae3\n",
-      "http://kflow.eurecom.fr/object/c968139c-a2e5-5d8b-b895-f60510300dfd\n",
-      "http://kflow.eurecom.fr/object/a9672fa9-3fa8-5a92-aa43-6257f7d26bd8\n",
-      "http://kflow.eurecom.fr/subject/90d5233d-1310-521d-ab06-0d521aa7072c\n",
-      "http://kflow.eurecom.fr/subject/90d5233d-1310-521d-ab06-0d521aa7072c\n",
-      "http://kflow.eurecom.fr/subject/90d5233d-1310-521d-ab06-0d521aa7072c\n",
-      "http://kflow.eurecom.fr/subject/90d5233d-1310-521d-ab06-0d521aa7072c\n",
-      "http://kflow.eurecom.fr/subject/90d5233d-1310-521d-ab06-0d521aa7072c\n",
-      "http://kflow.eurecom.fr/subject/8984ba25-f989-5dfd-8b70-96b3e465f344\n",
-      "http://kflow.eurecom.fr/subject/c4e0ee8e-08ba-5dff-99c6-7cc4dc008677\n",
-      "http://kflow.eurecom.fr/subject/c4e0ee8e-08ba-5dff-99c6-7cc4dc008677\n",
-      "http://kflow.eurecom.fr/subject/c4e0ee8e-08ba-5dff-99c6-7cc4dc008677\n",
-      "http://kflow.eurecom.fr/subject/c4e0ee8e-08ba-5dff-99c6-7cc4dc008677\n",
-      "http://kflow.eurecom.fr/object/e794fe8d-b856-5062-b689-1da9c4aeb41b\n",
-      "http://kflow.eurecom.fr/object/a2fb1faa-7415-5057-aac8-2c462129e23c\n",
-      "http://kflow.eurecom.fr/object/ce8519d1-b69c-5dd6-94f5-3564b16f55c7\n",
-      "http://kflow.eurecom.fr/object/ce8519d1-b69c-5dd6-94f5-3564b16f55c7\n",
-      "http://kflow.eurecom.fr/object/ce8519d1-b69c-5dd6-94f5-3564b16f55c7\n",
-      "http://kflow.eurecom.fr/object/cdfb748d-7c78-5360-9718-54c54c3340cd\n",
-      "http://kflow.eurecom.fr/object/cdfb748d-7c78-5360-9718-54c54c3340cd\n",
-      "http://kflow.eurecom.fr/object/b916eb1d-72c1-5325-9a88-332d39b2ceda\n",
-      "http://kflow.eurecom.fr/object/b916eb1d-72c1-5325-9a88-332d39b2ceda\n",
-      "http://kflow.eurecom.fr/object/b916eb1d-72c1-5325-9a88-332d39b2ceda\n",
-      "http://kflow.eurecom.fr/object/a5759126-c28b-546e-96ea-d4414f9e5863\n",
-      "http://kflow.eurecom.fr/object/a5759126-c28b-546e-96ea-d4414f9e5863\n",
-      "http://kflow.eurecom.fr/subject/52bd5718-1544-50fc-9fd8-0277e76011ad\n",
-      "http://kflow.eurecom.fr/subject/52bd5718-1544-50fc-9fd8-0277e76011ad\n",
-      "http://kflow.eurecom.fr/subject/52bd5718-1544-50fc-9fd8-0277e76011ad\n",
-      "http://kflow.eurecom.fr/object/73421415-8768-57ae-a999-310b5d8f0200\n",
-      "http://kflow.eurecom.fr/object/40c0efa7-1ebd-536a-855e-5579288530e6\n",
-      "http://kflow.eurecom.fr/object/40c0efa7-1ebd-536a-855e-5579288530e6\n",
-      "http://kflow.eurecom.fr/object/40c0efa7-1ebd-536a-855e-5579288530e6\n",
-      "http://kflow.eurecom.fr/object/a162a38d-ca5a-50cc-8e5d-5099fd3bbdfb\n",
-      "http://kflow.eurecom.fr/object/a162a38d-ca5a-50cc-8e5d-5099fd3bbdfb\n",
-      "http://kflow.eurecom.fr/object/fc61fbae-3060-565d-821e-449be1dbfdef\n",
-      "http://kflow.eurecom.fr/object/fc61fbae-3060-565d-821e-449be1dbfdef\n",
-      "http://kflow.eurecom.fr/object/fc61fbae-3060-565d-821e-449be1dbfdef\n",
-      "http://kflow.eurecom.fr/object/bad73ccf-5fd7-58b8-b950-256e7a227369\n",
-      "http://kflow.eurecom.fr/object/bad73ccf-5fd7-58b8-b950-256e7a227369\n",
-      "http://kflow.eurecom.fr/object/bad73ccf-5fd7-58b8-b950-256e7a227369\n",
-      "http://kflow.eurecom.fr/object/d660ead0-2cba-5f3c-8bf7-83913f8391df\n",
-      "http://kflow.eurecom.fr/subject/1cc23d43-7e28-51ee-bedb-2a5811b64d10\n",
-      "http://kflow.eurecom.fr/object/631eda01-bb61-5425-abdd-ea5871202bfc\n",
-      "http://kflow.eurecom.fr/object/631eda01-bb61-5425-abdd-ea5871202bfc\n",
-      "http://kflow.eurecom.fr/object/631eda01-bb61-5425-abdd-ea5871202bfc\n",
-      "http://kflow.eurecom.fr/object/617e3108-5102-5af5-84b4-b10cd5582e76\n",
-      "http://kflow.eurecom.fr/object/631eda01-bb61-5425-abdd-ea5871202bfc\n",
-      "http://kflow.eurecom.fr/object/74744dd1-ba38-5db5-aaad-a5856e6401f8\n",
-      "http://kflow.eurecom.fr/object/74744dd1-ba38-5db5-aaad-a5856e6401f8\n",
-      "http://kflow.eurecom.fr/object/74744dd1-ba38-5db5-aaad-a5856e6401f8\n",
-      "http://kflow.eurecom.fr/object/74744dd1-ba38-5db5-aaad-a5856e6401f8\n",
-      "http://kflow.eurecom.fr/subject/8d90d60f-21e4-5fa0-868b-8f3b435e3939\n",
-      "http://kflow.eurecom.fr/subject/8d90d60f-21e4-5fa0-868b-8f3b435e3939\n",
-      "http://kflow.eurecom.fr/subject/8d90d60f-21e4-5fa0-868b-8f3b435e3939\n",
-      "http://kflow.eurecom.fr/subject/21d0098f-3dd7-545e-83ba-a663eed65eff\n",
-      "http://kflow.eurecom.fr/subject/9edb7a3a-7bfb-599e-b642-7a7433f79bd4\n",
-      "http://kflow.eurecom.fr/subject/0bbbe014-8155-51ff-831f-9a0978c3efec\n",
-      "http://kflow.eurecom.fr/object/7e1f98e7-68d4-544c-b86d-a170bad28116\n",
-      "http://kflow.eurecom.fr/object/521ae786-42f2-5547-b35d-9a551c26d609\n",
-      "http://kflow.eurecom.fr/object/521ae786-42f2-5547-b35d-9a551c26d609\n",
-      "http://kflow.eurecom.fr/object/521ae786-42f2-5547-b35d-9a551c26d609\n",
-      "http://kflow.eurecom.fr/object/3f7c1ae8-1ea7-5f45-97bb-7ab06021916c\n",
-      "http://kflow.eurecom.fr/object/4fdc4438-c1d1-51ab-b0e7-adbeb7eb54f6\n",
-      "http://kflow.eurecom.fr/object/2f7a9086-a0b1-5628-bead-987ffa46fc52\n",
-      "http://kflow.eurecom.fr/object/2f7a9086-a0b1-5628-bead-987ffa46fc52\n",
-      "http://kflow.eurecom.fr/object/2f7a9086-a0b1-5628-bead-987ffa46fc52\n",
-      "http://kflow.eurecom.fr/object/2f7a9086-a0b1-5628-bead-987ffa46fc52\n",
-      "http://kflow.eurecom.fr/object/2f7a9086-a0b1-5628-bead-987ffa46fc52\n",
-      "http://kflow.eurecom.fr/object/a6872e46-85f6-541c-aaf8-5eb4d350547a\n",
-      "http://kflow.eurecom.fr/object/a6872e46-85f6-541c-aaf8-5eb4d350547a\n",
-      "http://kflow.eurecom.fr/object/a6872e46-85f6-541c-aaf8-5eb4d350547a\n",
-      "http://kflow.eurecom.fr/object/4fdc4438-c1d1-51ab-b0e7-adbeb7eb54f6\n",
-      "http://kflow.eurecom.fr/object/0b97bc69-b318-52f5-a1f5-8144ddcf37cd\n",
-      "http://kflow.eurecom.fr/object/0b97bc69-b318-52f5-a1f5-8144ddcf37cd\n",
-      "http://kflow.eurecom.fr/object/0b97bc69-b318-52f5-a1f5-8144ddcf37cd\n",
-      "http://kflow.eurecom.fr/object/0b97bc69-b318-52f5-a1f5-8144ddcf37cd\n",
-      "http://kflow.eurecom.fr/subject/73aaa88b-4200-5569-a022-b6ce4b836752\n",
-      "http://kflow.eurecom.fr/subject/73aaa88b-4200-5569-a022-b6ce4b836752\n",
-      "http://kflow.eurecom.fr/subject/29cb2866-f8de-537a-86a3-e3d183b260fa\n",
-      "http://kflow.eurecom.fr/subject/29cb2866-f8de-537a-86a3-e3d183b260fa\n",
-      "http://kflow.eurecom.fr/object/d7514894-4a54-580b-83d2-1e78747642f9\n",
-      "http://kflow.eurecom.fr/object/0b911c25-3b00-5bf3-aa46-c40c95c4e214\n",
-      "http://kflow.eurecom.fr/object/2253bd2f-5556-51d6-901d-c64bd58e0a81\n",
-      "http://kflow.eurecom.fr/object/a21ea188-bb6c-54e5-b3aa-db6662d9f432\n",
-      "http://kflow.eurecom.fr/object/a21ea188-bb6c-54e5-b3aa-db6662d9f432\n",
-      "http://kflow.eurecom.fr/object/a21ea188-bb6c-54e5-b3aa-db6662d9f432\n",
-      "http://kflow.eurecom.fr/object/a21ea188-bb6c-54e5-b3aa-db6662d9f432\n",
-      "http://kflow.eurecom.fr/subject/e9d73ebb-f363-5777-b941-5ee001487dee\n",
-      "http://kflow.eurecom.fr/subject/fc285d00-bc7e-533a-adca-3fbfc1c3c053\n",
-      "http://kflow.eurecom.fr/subject/2661cfc8-5ed2-5850-8044-8e6dee21c2be\n",
-      "http://kflow.eurecom.fr/subject/2661cfc8-5ed2-5850-8044-8e6dee21c2be\n",
-      "http://kflow.eurecom.fr/subject/2661cfc8-5ed2-5850-8044-8e6dee21c2be\n",
-      "http://kflow.eurecom.fr/subject/2661cfc8-5ed2-5850-8044-8e6dee21c2be\n",
-      "http://kflow.eurecom.fr/subject/3aefed53-3711-5894-81e7-3108c6f02ab4\n",
-      "http://kflow.eurecom.fr/object/42902f85-cd17-5d3d-aa89-62f346a7c0be\n",
-      "http://kflow.eurecom.fr/subject/870fb3cd-936c-5db9-9e6d-3d28bc99f8fb\n",
-      "http://kflow.eurecom.fr/subject/870fb3cd-936c-5db9-9e6d-3d28bc99f8fb\n",
-      "http://kflow.eurecom.fr/subject/870fb3cd-936c-5db9-9e6d-3d28bc99f8fb\n",
-      "http://kflow.eurecom.fr/object/f0eb67a3-de3d-5027-92d2-d2aa7ef22bbc\n",
-      "http://kflow.eurecom.fr/object/537635b3-a114-541c-9b2d-e365cbba727a\n",
-      "http://kflow.eurecom.fr/object/15c4dda2-8663-5b1a-8c69-55b9d595678a\n",
-      "http://kflow.eurecom.fr/subject/2a2beed9-75dc-587d-a72f-76370d22bb9a\n",
-      "http://kflow.eurecom.fr/subject/2a2beed9-75dc-587d-a72f-76370d22bb9a\n",
-      "http://kflow.eurecom.fr/subject/2a2beed9-75dc-587d-a72f-76370d22bb9a\n",
-      "http://kflow.eurecom.fr/subject/36f33083-022f-5356-a8e8-c979a715907a\n",
-      "http://kflow.eurecom.fr/subject/36f33083-022f-5356-a8e8-c979a715907a\n",
-      "http://kflow.eurecom.fr/subject/36f33083-022f-5356-a8e8-c979a715907a\n",
-      "http://kflow.eurecom.fr/subject/36f33083-022f-5356-a8e8-c979a715907a\n",
-      "http://kflow.eurecom.fr/subject/1383abea-da3a-5b57-bf77-5735dc764488\n",
-      "http://kflow.eurecom.fr/subject/428cc46b-cf85-55fb-9571-8371d608b4e0\n",
-      "http://kflow.eurecom.fr/subject/1dac4e18-5288-5f5b-88e1-8ada7933c61b\n",
-      "http://kflow.eurecom.fr/subject/c99cd974-418d-5356-bdaa-c069f07323c4\n",
-      "http://kflow.eurecom.fr/subject/758b0782-c4f6-54db-bd0a-b30983d7cf74\n",
-      "http://kflow.eurecom.fr/subject/cf04f4dd-fc51-50ba-947b-a68a59e57a2e\n",
-      "http://kflow.eurecom.fr/subject/16d7a722-86ae-562c-9650-778a643238f3\n",
-      "http://kflow.eurecom.fr/subject/16d7a722-86ae-562c-9650-778a643238f3\n",
-      "http://kflow.eurecom.fr/subject/cf04f4dd-fc51-50ba-947b-a68a59e57a2e\n",
-      "http://kflow.eurecom.fr/subject/836e695b-2791-5172-80e8-6780d8777a8e\n",
-      "http://kflow.eurecom.fr/subject/9af4534d-224f-5300-a7a5-97488ae24907\n",
-      "http://kflow.eurecom.fr/subject/3e407643-bfd1-5e52-a1f3-8f5bfc583568\n",
-      "http://kflow.eurecom.fr/subject/547fe467-a6c0-546b-83f4-25671c81cdc7\n",
-      "http://kflow.eurecom.fr/subject/c718c7a4-c81f-50f3-9fa5-f1459e95d9ed\n",
-      "http://kflow.eurecom.fr/subject/c718c7a4-c81f-50f3-9fa5-f1459e95d9ed\n",
-      "http://kflow.eurecom.fr/subject/c718c7a4-c81f-50f3-9fa5-f1459e95d9ed\n",
-      "http://kflow.eurecom.fr/subject/25b55d38-50c5-54c4-b884-e4d97b91ab79\n",
-      "http://kflow.eurecom.fr/subject/25b55d38-50c5-54c4-b884-e4d97b91ab79\n",
-      "http://kflow.eurecom.fr/subject/25b55d38-50c5-54c4-b884-e4d97b91ab79\n",
-      "http://kflow.eurecom.fr/subject/69577fc8-dff6-5a06-a994-846c720788b2\n",
-      "http://kflow.eurecom.fr/subject/69577fc8-dff6-5a06-a994-846c720788b2\n",
-      "http://kflow.eurecom.fr/subject/69577fc8-dff6-5a06-a994-846c720788b2\n",
-      "http://kflow.eurecom.fr/subject/69577fc8-dff6-5a06-a994-846c720788b2\n",
-      "http://kflow.eurecom.fr/subject/69577fc8-dff6-5a06-a994-846c720788b2\n",
-      "http://kflow.eurecom.fr/subject/7362b316-21b1-5676-b345-1abeeeae4464\n",
-      "http://kflow.eurecom.fr/object/1a8ade6b-b95d-5edb-9778-9dc0caaacb52\n",
-      "http://kflow.eurecom.fr/object/76e3514b-a93a-5f62-8e9a-69eb2ea8fb39\n",
-      "http://kflow.eurecom.fr/object/76e3514b-a93a-5f62-8e9a-69eb2ea8fb39\n",
-      "http://kflow.eurecom.fr/subject/933dbe95-f539-5ce5-b517-f4d48c9f7cba\n",
-      "http://kflow.eurecom.fr/subject/933dbe95-f539-5ce5-b517-f4d48c9f7cba\n",
-      "http://kflow.eurecom.fr/subject/933dbe95-f539-5ce5-b517-f4d48c9f7cba\n"
+      "100%|██████████| 86/86 [01:37<00:00,  1.13s/it]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "<Graph identifier=N902f4758e8d7428ab953442ecb780ee5 (<class 'rdflib.graph.Graph'>)>"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "graph = Graph()\n",
-    "graph.parse('Data/examples/event_article_graph_complete_new.ttl')\n",
-    "\n",
-    "for cluster in cluster_doc:\n",
-    "\n",
-    "    if cluster.startswith('['):\n",
-    "        cluster = ast.literal_eval(cluster)\n",
-    "\n",
-    "        prev_mention_uri = None\n",
-    "        if len(cluster) != 1:\n",
-    "            for i, mention in enumerate(cluster):\n",
-    "                mention = mention.split('_')\n",
-    "\n",
-    "                sentence = data[(data['URI'] == mention[1]) & (data['Sentence_num'] == int(mention[2]))]['Sentence'].values[0]\n",
-    "                sentence_uri = node_creation('', sentence, base_add='/sentence') #Generate the URI for the sentence\n",
-    "\n",
-    "                mention_uri = node_creation('', mention[0] + str(sentence_uri), base_add='/subject')\n",
-    "\n",
-    "                #determine subject or object\n",
-    "                if data[(data['URI'] == mention[1]) & (data['Sentence_num'] == int(mention[2]))]['Subject'].values[0] == mention[0]:\n",
-    "                    mention_uri = node_creation('', mention[0] + str(sentence_uri), base_add='/subject')\n",
-    "\n",
-    "                else:\n",
-    "                    mention_uri = node_creation('', mention[0] + str(sentence_uri), base_add='/object')\n",
-    "\n",
-    "                #print(mention_uri)\n",
-    "\n",
-    "                if i != 0:\n",
-    "                    graph.add((prev_mention_uri, owl.sameAs, mention_uri))\n",
+    "graph.parse('Data/examples/event_article_graph_complete.ttl')\n",
+    "data = pd.read_csv('Data/final_data_with_predictions_new.csv') #Load the original dataset\n",
+    "owl = Namespace(\"http://www.w3.org/2002/07/owl#\")\n",
     "\n",
     "\n",
-    "                prev_mention_uri = mention_uri\n",
-    "\n"
+    "for doc in tqdm(cluster_docs):\n",
+    "\n",
+    "    with open(doc) as f: #Open the generated cluster file\n",
+    "        cluster_doc = f.readlines()\n",
+    "\n",
+    "    for cluster in cluster_doc:\n",
+    "\n",
+    "        if cluster.startswith('['):\n",
+    "            cluster = ast.literal_eval(cluster)\n",
+    "\n",
+    "            if len(cluster) != 1:\n",
+    "                prev_mention_uri = None\n",
+    "\n",
+    "                for i, mention in enumerate(cluster):\n",
+    "                    mention = mention.split('_')\n",
+    "\n",
+    "                    sentence = data[(data['URI'] == mention[1]) & (data['Sentence_num'] == int(mention[2]))]['Sentence'].values[0]\n",
+    "                    sentence_uri = node_creation('', sentence, base_add='/sentence') #Generate the URI for the sentence\n",
+    "\n",
+    "\n",
+    "                    #determine subject or object\n",
+    "                    if data[(data['URI'] == mention[1]) & (data['Sentence_num'] == int(mention[2]))]['Subject'].values[0] == mention[0]:\n",
+    "                        mention_uri = node_creation('', mention[0] + str(sentence_uri), base_add='/subject')\n",
+    "\n",
+    "                    else:\n",
+    "                        mention_uri = node_creation('', mention[0] + str(sentence_uri), base_add='/object')\n",
+    "\n",
+    "                    #print(mention_uri)\n",
+    "\n",
+    "                    if i != 0:\n",
+    "                        graph.add((prev_mention_uri, owl.sameAs, mention_uri))\n",
+    "\n",
+    "\n",
+    "                    prev_mention_uri = mention_uri\n",
+    "graph.serialize('Data/examples/event_article_graph_complete_merged.ttl', format='turtle')"
    ],
    "metadata": {
     "collapsed": false,
